// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sdk > getParachainBalances > on 'Centrifuge' for address: '4fAKSBMGVT9jt1jkuJvXgvMbmqV2BuspFWWEm…' > should get expected balances 1`] = `
[
  n {
    "address": undefined,
    "amount": 570000000000000000n,
    "decimals": 18,
    "key": "cfg",
    "originSymbol": "CFG",
    "symbol": "CFG",
  },
]
`;

exports[`sdk > getParachainBalances > on 'Centrifuge' for address: '5FtGz8bgoCQ6pNAYLWCfxKx9ekLnX1ewP9q2T…' > should get expected balances 1`] = `
[
  n {
    "address": undefined,
    "amount": 570000000000000000n,
    "decimals": 18,
    "key": "cfg",
    "originSymbol": "CFG",
    "symbol": "CFG",
  },
]
`;

exports[`sdk > getParachainBalances > on 'HydraDX Alphanet' for address: '5FtGz8bgoCQ6pNAYLWCfxKx9ekLnX1ewP9q2T…' > should get expected balances 1`] = `
[
  n {
    "address": undefined,
    "amount": 178046239082538836n,
    "decimals": 18,
    "key": "ftmwh",
    "originSymbol": "FTM.wh",
    "symbol": "FTM.wh",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 18,
    "key": "dev",
    "originSymbol": "DEV",
    "symbol": "DEV",
  },
  n {
    "address": undefined,
    "amount": 3000000000000n,
    "decimals": 12,
    "key": "hdx",
    "originSymbol": "HDX",
    "symbol": "HDX",
  },
]
`;

exports[`sdk > getParachainBalances > on 'HydraDX Alphanet' for address: '7MR8Qxy9sJmN6bfHMggAtFY5DwLxfrssLuTnP…' > should get expected balances 1`] = `
[
  n {
    "address": undefined,
    "amount": 178046239082538836n,
    "decimals": 18,
    "key": "ftmwh",
    "originSymbol": "FTM.wh",
    "symbol": "FTM.wh",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 18,
    "key": "dev",
    "originSymbol": "DEV",
    "symbol": "DEV",
  },
  n {
    "address": undefined,
    "amount": 3000000000000n,
    "decimals": 12,
    "key": "hdx",
    "originSymbol": "HDX",
    "symbol": "HDX",
  },
]
`;

exports[`sdk > getParachainBalances > on 'HydraDX' for address: '5FtGz8bgoCQ6pNAYLWCfxKx9ekLnX1ewP9q2T…' > should get expected balances 1`] = `
[
  n {
    "address": undefined,
    "amount": 37000000000000n,
    "decimals": 18,
    "key": "weth",
    "originSymbol": "WETH",
    "symbol": "WETH",
  },
  n {
    "address": undefined,
    "amount": 120n,
    "decimals": 8,
    "key": "wbtc",
    "originSymbol": "WBTC",
    "symbol": "WBTC",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 6,
    "key": "usdtwh",
    "originSymbol": "USDT.Wh",
    "symbol": "USDT.Wh",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 18,
    "key": "dai",
    "originSymbol": "DAI",
    "symbol": "DAI",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 18,
    "key": "glmr",
    "originSymbol": "GLMR",
    "symbol": "GLMR",
  },
  n {
    "address": undefined,
    "amount": 1000000000000n,
    "decimals": 12,
    "key": "hdx",
    "originSymbol": "HDX",
    "symbol": "HDX",
  },
]
`;

exports[`sdk > getParachainBalances > on 'HydraDX' for address: '7MR8Qxy9sJmN6bfHMggAtFY5DwLxfrssLuTnP…' > should get expected balances 1`] = `
[
  n {
    "address": undefined,
    "amount": 37000000000000n,
    "decimals": 18,
    "key": "weth",
    "originSymbol": "WETH",
    "symbol": "WETH",
  },
  n {
    "address": undefined,
    "amount": 120n,
    "decimals": 8,
    "key": "wbtc",
    "originSymbol": "WBTC",
    "symbol": "WBTC",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 6,
    "key": "usdtwh",
    "originSymbol": "USDT.Wh",
    "symbol": "USDT.Wh",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 18,
    "key": "dai",
    "originSymbol": "DAI",
    "symbol": "DAI",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 18,
    "key": "glmr",
    "originSymbol": "GLMR",
    "symbol": "GLMR",
  },
  n {
    "address": undefined,
    "amount": 1000000000000n,
    "decimals": 12,
    "key": "hdx",
    "originSymbol": "HDX",
    "symbol": "HDX",
  },
]
`;

exports[`sdk > getParachainBalances > on 'Moonbase Alpha' for address: '0x4E82143Af671Cc8201Bc7efCBbCED3A69e8…' > should get expected balances 1`] = `
[
  n {
    "address": "0xffffffff38794f8c53fc7325ea07463dc6965e20",
    "amount": 0n,
    "decimals": 18,
    "key": "agng",
    "originSymbol": "AGNG",
    "symbol": "AGNG",
  },
  n {
    "address": "0xffffffff345dc44ddae98df024eb494321e73fcc",
    "amount": 0n,
    "decimals": 12,
    "key": "hdx",
    "originSymbol": "HDX",
    "symbol": "HDX",
  },
  n {
    "address": "0x566c1cebc6A4AFa1C122E039C4BEBe77043148Ee",
    "amount": 1234567890000000000n,
    "decimals": 18,
    "key": "ftmwh",
    "originSymbol": "FTM.wh",
    "symbol": "FTM.wh",
  },
  n {
    "address": "0xE5dE10C4b744bac6b783fAF8d9B9fDFF14Acc3c9",
    "amount": 10000n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  n {
    "address": "0xffffffff1fcacbd218edc0eba20fc2308c778080",
    "amount": 0n,
    "decimals": 12,
    "key": "unit",
    "originSymbol": "Unit",
    "symbol": "Unit",
  },
  n {
    "address": "0xffffffff6448d0746f2a66342b67ef9caf89478e",
    "amount": 0n,
    "decimals": 10,
    "key": "tur",
    "originSymbol": "TUR",
    "symbol": "TUR",
  },
  n {
    "address": "0xffffffff75976211c786fe4d73d2477e222786ac",
    "amount": 0n,
    "decimals": 18,
    "key": "tt1",
    "originSymbol": "TT1",
    "symbol": "TT1",
  },
  n {
    "address": "0xffffffff10dd5fd142163a40ce0dae8c56e2801f",
    "amount": 0n,
    "decimals": 12,
    "key": "pica",
    "originSymbol": "PICA",
    "symbol": "PICA",
  },
  n {
    "address": "0xffffffffb7cdb201c395c238350568f17cfbd3b5",
    "amount": 0n,
    "decimals": 6,
    "key": "atom",
    "originSymbol": "ATOM",
    "symbol": "ATOM",
  },
  n {
    "address": "0xffffffffb3229c8e7657eabea704d5e75246e544",
    "amount": 0n,
    "decimals": 12,
    "key": "otp",
    "originSymbol": "OTP",
    "symbol": "OTP",
  },
  n {
    "address": "0xffffffff7fee8415e1c2ac3a15c48d3546b95e16",
    "amount": 0n,
    "decimals": 12,
    "key": "ampe",
    "originSymbol": "AMPE",
    "symbol": "AMPE",
  },
  n {
    "address": "0x9133c5a22024118804089f1fB752b7B2ce2a6351",
    "amount": 10000000000000000n,
    "decimals": 18,
    "key": "alan",
    "originSymbol": "ALAN",
    "symbol": "ALAN",
  },
  n {
    "address": "0x0000000000000000000000000000000000000802",
    "amount": 6543210000000000000n,
    "decimals": 18,
    "key": "dev",
    "originSymbol": "DEV",
    "symbol": "DEV",
  },
]
`;

exports[`sdk > getParachainBalances > on 'Moonbase Beta' for address: '0x4E82143Af671Cc8201Bc7efCBbCED3A69e8…' > should get expected balances 1`] = `
[
  n {
    "address": undefined,
    "amount": 100000000000000000n,
    "decimals": 18,
    "key": "ftmwh",
    "originSymbol": "FTM.wh",
    "symbol": "FTM.wh",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  n {
    "address": undefined,
    "amount": 1100000000000000000n,
    "decimals": 18,
    "key": "alan",
    "originSymbol": "ALAN",
    "symbol": "ALAN",
  },
  n {
    "address": undefined,
    "amount": 1100000000000000000n,
    "decimals": 18,
    "key": "dev",
    "originSymbol": "DEV",
    "symbol": "DEV",
  },
]
`;

exports[`sdk > getParachainBalances > on 'Moonbeam' for address: '0x4E82143Af671Cc8201Bc7efCBbCED3A69e8…' > should get expected balances 1`] = `
[
  n {
    "address": "0xffffffffec4908b74688a01374f789b48e9a3eab",
    "amount": 0n,
    "decimals": 18,
    "key": "peaq",
    "originSymbol": "PEAQ",
    "symbol": "PEAQ",
  },
  n {
    "address": "0xffffffff6af229ae7f0f4e0188157e189a487d59",
    "amount": 0n,
    "decimals": 12,
    "key": "bncs",
    "originSymbol": "BNCS",
    "symbol": "BNCS",
  },
  n {
    "address": "0xffffffff43b4560bc0c451a3386e082bff50ac90",
    "amount": 0n,
    "decimals": 10,
    "key": "sub",
    "originSymbol": "SUB",
    "symbol": "SUB",
  },
  n {
    "address": "0xffffffff71815ab6142e0e20c7259126c6b40612",
    "amount": 0n,
    "decimals": 10,
    "key": "ztg",
    "originSymbol": "ZTG",
    "symbol": "ZTG",
  },
  n {
    "address": "0xfFFfFFFF6C57e17D210DF507c82807149fFd70B2",
    "amount": 0n,
    "decimals": 18,
    "key": "fil",
    "originSymbol": "FIL",
    "symbol": "FIL",
  },
  n {
    "address": "0xab3f0245B83feB11d15AAffeFD7AD465a59817eD",
    "amount": 0n,
    "decimals": 18,
    "key": "weth",
    "originSymbol": "WETH",
    "symbol": "WETH",
  },
  n {
    "address": "0xE57eBd2d67B462E9926e04a8e33f01cD0D64346D",
    "amount": 0n,
    "decimals": 8,
    "key": "wbtc",
    "originSymbol": "WBTC",
    "symbol": "WBTC",
  },
  n {
    "address": "0xFFfFFfFfdA2a05FB50e7ae99275F4341AEd43379",
    "amount": 0n,
    "decimals": 18,
    "key": "vmanta",
    "originSymbol": "vMANTA",
    "symbol": "vMANTA",
  },
  n {
    "address": "0xFfFfFFff99dABE1a8De0EA22bAa6FD48fdE96F6c",
    "amount": 0n,
    "decimals": 18,
    "key": "vglmr",
    "originSymbol": "vGLMR",
    "symbol": "vGLMR",
  },
  n {
    "address": "0xFffffFffCd0aD0EA6576B7b285295c85E94cf4c1",
    "amount": 0n,
    "decimals": 18,
    "key": "vfil",
    "originSymbol": "vFIL",
    "symbol": "vFIL",
  },
  n {
    "address": "0xFFFfffFf15e1b7E3dF971DD813Bc394deB899aBf",
    "amount": 0n,
    "decimals": 10,
    "key": "vdot",
    "originSymbol": "vDOT",
    "symbol": "vDOT",
  },
  n {
    "address": "0xFffFffff55C732C47639231a4C4373245763d26E",
    "amount": 0n,
    "decimals": 18,
    "key": "vastr",
    "originSymbol": "vASTR",
    "symbol": "vASTR",
  },
  n {
    "address": "0xc30E9cA94CF52f3Bf5692aaCF81353a27052c46f",
    "amount": 0n,
    "decimals": 6,
    "key": "usdtwh",
    "originSymbol": "USDT.Wh",
    "symbol": "USDT.Wh",
  },
  n {
    "address": "0x931715FEE2d06333043d11F658C8CE934aC61D0c",
    "amount": 0n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  n {
    "address": "0x06e605775296e851FF43b4dAa541Bb0984E9D6fD",
    "amount": 0n,
    "decimals": 18,
    "key": "dai",
    "originSymbol": "DAI",
    "symbol": "DAI",
  },
  n {
    "address": "0xffffffff345dc44ddae98df024eb494321e73fcc",
    "amount": 0n,
    "decimals": 12,
    "key": "hdx",
    "originSymbol": "HDX",
    "symbol": "HDX",
  },
  n {
    "address": "0xffffffff5da2d7214d268375cf8fb1715705fdc6",
    "amount": 0n,
    "decimals": 10,
    "key": "ded",
    "originSymbol": "DED",
    "symbol": "DED",
  },
  n {
    "address": "0xffffffff30478fafbe935e466da114e14fb3563d",
    "amount": 0n,
    "decimals": 10,
    "key": "pink",
    "originSymbol": "PINK",
    "symbol": "PINK",
  },
  n {
    "address": "0xFFfffffF7D2B0B761Af01Ca8e25242976ac0aD7D",
    "amount": 0n,
    "decimals": 6,
    "key": "usdc",
    "originSymbol": "USDC",
    "symbol": "USDC",
  },
  n {
    "address": "0xffffffffea09fb06d082fd1275cd48b191cbcd1d",
    "amount": 0n,
    "decimals": 6,
    "key": "usdt",
    "originSymbol": "USDT",
    "symbol": "USDT",
  },
  n {
    "address": "0xffffffff5e90e365edca87fb4c8306df1e91464f",
    "amount": 0n,
    "decimals": 18,
    "key": "ring",
    "originSymbol": "RING",
    "symbol": "RING",
  },
  n {
    "address": "0xffffffff63d24ecc8eb8a7b5d0803e900f7b6ced",
    "amount": 0n,
    "decimals": 12,
    "key": "pha",
    "originSymbol": "PHA",
    "symbol": "PHA",
  },
  n {
    "address": "0xffffffff2257622f345e1acde0d4f46d7d1d77d0",
    "amount": 0n,
    "decimals": 12,
    "key": "pen",
    "originSymbol": "PEN",
    "symbol": "PEN",
  },
  n {
    "address": "0xffffffff18898cb5fe1e88e668152b4f4052a947",
    "amount": 0n,
    "decimals": 12,
    "key": "para",
    "originSymbol": "PARA",
    "symbol": "PARA",
  },
  n {
    "address": "0xffffffffb3229c8e7657eabea704d5e75246e544",
    "amount": 0n,
    "decimals": 12,
    "key": "neuro",
    "originSymbol": "NEURO",
    "symbol": "NEURO",
  },
  n {
    "address": "0xffffffffe896ba7cb118b9fa571c6dc0a99deff1",
    "amount": 0n,
    "decimals": 11,
    "key": "nodl",
    "originSymbol": "NODL",
    "symbol": "NODL",
  },
  n {
    "address": "0xffffffff7d3875460d4509eb8d0362c611b4e841",
    "amount": 0n,
    "decimals": 18,
    "key": "manta",
    "originSymbol": "MANTA",
    "symbol": "MANTA",
  },
  n {
    "address": "0xffffffffa9cfffa9834235fe53f4733f1b8b28d4",
    "amount": 0n,
    "decimals": 10,
    "key": "ldot",
    "originSymbol": "LDOT",
    "symbol": "LDOT",
  },
  n {
    "address": "0xffffffff4c1cbcd97597339702436d4f18a375ab",
    "amount": 0n,
    "decimals": 10,
    "key": "intr",
    "originSymbol": "INTR",
    "symbol": "INTR",
  },
  n {
    "address": "0xffffffff5ac1f9a51a93f5c527385edf7fe98a52",
    "amount": 0n,
    "decimals": 8,
    "key": "ibtc",
    "originSymbol": "IBTC",
    "symbol": "IBTC",
  },
  n {
    "address": "0xffffffff8cda1707baf23834d211b08726b1e499",
    "amount": 0n,
    "decimals": 9,
    "key": "eqd",
    "originSymbol": "EQD",
    "symbol": "EQD",
  },
  n {
    "address": "0xffffffff8f6267e040d8a0638c576dfba4f0f6d6",
    "amount": 0n,
    "decimals": 9,
    "key": "eq",
    "originSymbol": "EQ",
    "symbol": "EQ",
  },
  n {
    "address": "0xffffffff1fcacbd218edc0eba20fc2308c778080",
    "amount": 330000000n,
    "decimals": 10,
    "key": "dot",
    "originSymbol": "DOT",
    "symbol": "DOT",
  },
  n {
    "address": "0xffffffff44bd9d2ffee20b25d1cf9e78edb6eae3",
    "amount": 0n,
    "decimals": 18,
    "key": "cfg",
    "originSymbol": "CFG",
    "symbol": "CFG",
  },
  n {
    "address": "0xffffffff7cc06abdf7201b350a1265c62c8601d2",
    "amount": 0n,
    "decimals": 12,
    "key": "bnc",
    "originSymbol": "BNC",
    "symbol": "BNC",
  },
  n {
    "address": "0xffffffff52c56a9257bb97f4b2b6f7b2d624ecda",
    "amount": 0n,
    "decimals": 12,
    "key": "aseed",
    "originSymbol": "aSEED",
    "symbol": "aSEED",
  },
  n {
    "address": "0xffffffffa893ad19e540e172c10d78d4d479b5cf",
    "amount": 0n,
    "decimals": 18,
    "key": "astr",
    "originSymbol": "ASTR",
    "symbol": "ASTR",
  },
  n {
    "address": "0xffffffffa922fef94566104a6e5a35a4fcddaa9f",
    "amount": 0n,
    "decimals": 12,
    "key": "aca",
    "originSymbol": "ACA",
    "symbol": "ACA",
  },
  n {
    "address": "0x0000000000000000000000000000000000000802",
    "amount": 1330000000000000000n,
    "decimals": 18,
    "key": "glmr",
    "originSymbol": "GLMR",
    "symbol": "GLMR",
  },
]
`;

exports[`sdk > getParachainBalances > on 'peaq Alphanet' for address: '5FtGz8bgoCQ6pNAYLWCfxKx9ekLnX1ewP9q2T…' > should get expected balances 1`] = `
[
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 18,
    "key": "ftmwh",
    "originSymbol": "FTM.wh",
    "symbol": "FTM.wh",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 18,
    "key": "dev",
    "originSymbol": "DEV",
    "symbol": "DEV",
  },
  n {
    "address": undefined,
    "amount": 1223300000000000000n,
    "decimals": 18,
    "key": "agng",
    "originSymbol": "AGNG",
    "symbol": "AGNG",
  },
]
`;

exports[`sdk > getParachainBalances > on 'peaq EVM Alphanet' for address: '0x4E82143Af671Cc8201Bc7efCBbCED3A69e8…' > should get expected balances 1`] = `
[
  n {
    "address": "0xFfFfFffF000000000000000000000000000003e8",
    "amount": 330000000000000000n,
    "decimals": 18,
    "key": "dev",
    "originSymbol": "DEV",
    "symbol": "DEV",
  },
  n {
    "address": "0xFffFffFF000000000000000000000000000003E9",
    "amount": 123000000000000000n,
    "decimals": 18,
    "key": "ftmwh",
    "originSymbol": "FTM.wh",
    "symbol": "FTM.wh",
  },
]
`;

exports[`sdk > getParachainBalances > on 'peaq EVM' for address: '0x4E82143Af671Cc8201Bc7efCBbCED3A69e8…' > should get expected balances 1`] = `
[
  n {
    "address": "0xfFffffFF000000000000000000000000000003Ed",
    "amount": 0n,
    "decimals": 6,
    "key": "usdtwh",
    "originSymbol": "USDT.Wh",
    "symbol": "USDT.Wh",
  },
  n {
    "address": "0xFFFfFfFf000000000000000000000000000003ea",
    "amount": 0n,
    "decimals": 18,
    "key": "weth",
    "originSymbol": "WETH",
    "symbol": "WETH",
  },
  n {
    "address": "0xfffFFFFF000000000000000000000000000003eb",
    "amount": 0n,
    "decimals": 8,
    "key": "wbtc",
    "originSymbol": "WBTC",
    "symbol": "WBTC",
  },
  n {
    "address": "0xfFffFFFF000000000000000000000000000003Ec",
    "amount": 0n,
    "decimals": 18,
    "key": "dai",
    "originSymbol": "DAI",
    "symbol": "DAI",
  },
  n {
    "address": "0xFffFffFF000000000000000000000000000003E9",
    "amount": 0n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  n {
    "address": "0xFfFfFffF000000000000000000000000000003e8",
    "amount": 0n,
    "decimals": 18,
    "key": "glmr",
    "originSymbol": "GLMR",
    "symbol": "GLMR",
  },
]
`;

exports[`sdk > getParachainBalances > on 'peaq' for address: '5FtGz8bgoCQ6pNAYLWCfxKx9ekLnX1ewP9q2T…' > should get expected balances 1`] = `
[
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 6,
    "key": "usdtwh",
    "originSymbol": "USDT.Wh",
    "symbol": "USDT.Wh",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 18,
    "key": "weth",
    "originSymbol": "WETH",
    "symbol": "WETH",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 8,
    "key": "wbtc",
    "originSymbol": "WBTC",
    "symbol": "WBTC",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 18,
    "key": "dai",
    "originSymbol": "DAI",
    "symbol": "DAI",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  n {
    "address": undefined,
    "amount": 0n,
    "decimals": 18,
    "key": "glmr",
    "originSymbol": "GLMR",
    "symbol": "GLMR",
  },
  n {
    "address": undefined,
    "amount": 1313000000000000000n,
    "decimals": 18,
    "key": "peaq",
    "originSymbol": "PEAQ",
    "symbol": "PEAQ",
  },
]
`;
